--- a/src/main/java/com/roguecloud/resources/index-server.html
+++ b/src/main/java/com/roguecloud/resources/index-server.html
@@ -260,7 +260,7 @@ body.presenter {
 	    	
 	    <div id="logo" style="position:absolute; bottom:0; left: 20px; font-family: sans-serif;">
 	    	Powered by<br/>
-	    	<a href="https://microclimate-dev2ops.github.io/"><img src="resources/logo.svg" width="70%" style="border-style: none"></a><br/>
+	    	<a href="https://codewind.dev"><img src="resources/codewind-logo.png" width="70%" style="border-style: none"></a><br/>
 	    	<!-- 
 	    	<br/>
 	    	<table border="0">
